<resources>
    <string name="app_name">Contacts Manager</string>
    <string name="title">Contacts Manager</string>
    <string name="btnCreateContact">CREATE NEW CONTACT</string>
    <string name="contactProfilePhoto">Contact Photo</string>
    <string name="contactPhone">Phone Number</string>
    <string name="contactEmail">contact Email</string>
    <string name="contactLocation">Contact location</string>
    <string name="etNameHint">Please enter your name</string>
    <string name="etPhoneHint">Please enter your Phone Number</string>
    <string name="etEmailHint">Please enter your Email Address</string>
    <string name="etAddressHint">Please enter your Postal Address</string>
    <string name="satisfied">satisfied</string>
    <string name="good">good</string>
    <string name="dissatisfied">dissatisfied</string>
</resources>